{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 96,
  "lineage": "f95c0d60-c5cc-f022-e96f-2a73b89afe7d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "expenses_instance_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0738e1a0d363b9c7e",
            "arn": "arn:aws:ec2:us-east-1:710876988000:instance/i-03e4f19aecb18a628",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03e4f19aecb18a628",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "expenses_api_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a5bf624f33014e2f",
            "private_dns": "ip-10-0-1-180.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.180",
            "public_dns": "ec2-44-201-63-171.compute-1.amazonaws.com",
            "public_ip": "44.201.63.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c73945beba6a8c76",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c232dd0620539cbc",
            "tags": {
              "Name": "expenses_api_ec2"
            },
            "tags_all": {
              "Name": "expenses_api_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e81fe4b5f31b8b17"
            ]
          },
          "dependencies": [
            "aws_key_pair.expenses_key",
            "aws_security_group.expenses_sg",
            "aws_subnet.expenses_subnet",
            "aws_vpc.expenses_vpc_1",
            "data.aws_ami.expenses_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "expenses_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710876988000:internet-gateway/igw-0873b3568a6fce34a",
            "id": "igw-0873b3568a6fce34a",
            "owner_id": "710876988000",
            "tags": {
              "Name": "expenses_api_igw"
            },
            "tags_all": {
              "Name": "expenses_api_igw"
            },
            "vpc_id": "vpc-0226a0f7f37eb026d"
          },
          "dependencies": [
            "aws_vpc.expenses_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "expenses_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0873b3568a6fce34a",
            "id": "r-rtb-01f2fd2aa92ade0f41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01f2fd2aa92ade0f4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.expenses_igw",
            "aws_route_table.expenses_rtb",
            "aws_vpc.expenses_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "expenses_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710876988000:route-table/rtb-01f2fd2aa92ade0f4",
            "id": "rtb-01f2fd2aa92ade0f4",
            "owner_id": "710876988000",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "expenses_api_rtb"
            },
            "tags_all": {
              "Name": "expenses_api_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0226a0f7f37eb026d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.expenses_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "expenses_rtb_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002fb32e97d51cc69",
            "route_table_id": "rtb-01f2fd2aa92ade0f4",
            "subnet_id": "subnet-0c232dd0620539cbc"
          },
          "dependencies": [
            "aws_route_table.expenses_rtb",
            "aws_subnet.expenses_subnet",
            "aws_vpc.expenses_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "expenses_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710876988000:security-group/sg-0e81fe4b5f31b8b17",
            "description": "expenses api security group",
            "egress": [],
            "id": "sg-0e81fe4b5f31b8b17",
            "ingress": [],
            "name": "expenses_sg",
            "name_prefix": "",
            "owner_id": "710876988000",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0226a0f7f37eb026d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.expenses_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgr_public_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3853322203",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e81fe4b5f31b8b17",
            "security_group_rule_id": "sgr-08906f2e0584c6882",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.expenses_sg",
            "aws_vpc.expenses_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "srg_http_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-547707488",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e81fe4b5f31b8b17",
            "security_group_rule_id": "sgr-00f7b2ccb9af87481",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.expenses_sg",
            "aws_vpc.expenses_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "srg_ssh_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2519664597",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e81fe4b5f31b8b17",
            "security_group_rule_id": "sgr-060d30f57663b9451",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.expenses_sg",
            "aws_vpc.expenses_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "expenses_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710876988000:subnet/subnet-0c232dd0620539cbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c232dd0620539cbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "710876988000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "expenses_api_subnet_public"
            },
            "tags_all": {
              "Name": "expenses_api_subnet_public"
            },
            "vpc_id": "vpc-0226a0f7f37eb026d"
          },
          "dependencies": [
            "aws_vpc.expenses_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "expenses_vpc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710876988000:vpc/vpc-0226a0f7f37eb026d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-021779c0d5ac849de",
            "default_route_table_id": "rtb-052534a3d5589124d",
            "default_security_group_id": "sg-0e8d5c66e365eafee",
            "dhcp_options_id": "dopt-04538708f30de46a4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0226a0f7f37eb026d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-052534a3d5589124d",
            "owner_id": "710876988000",
            "tags": {
              "Name": "expenses_vpc_1"
            },
            "tags_all": {
              "Name": "expenses_vpc_1"
            }
          }
        }
      ]
    }
  ]
}